refactor initial queries and other changes to profile creation - to include calling api for unique url

--- a/portal/templates/access.html
+++ b/portal/templates/access.html
@@ -27,7 +27,7 @@
                         Tools for navigating the prostate cancer journey
                     </div>
                      <a href="/home" class="btn feature-btn feature-btn-primary">Report Symptoms</a> &nbsp; &nbsp;
-                     <a href="/initial-queries" class="btn feature-btn feature-btn-primary">Full Register</a>
+                     <a href="/initial-queries" class="btn feature-btn feature-btn-primary">Complete Register</a>
 
                 </div>
                 <div class="tnth-splash-bottom">
