--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -1,198 +1,32 @@
 {% extends "layout.html" %}
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
+{% from "initial_queries_macros.html" import tou, nameGroup, rolesGroup, bgGroup, patientQGroup, clinic %}
 
   <div id="loadingIndicator" class="loading-indicator">
     <i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
   </div>
-
-
-  <div id="topTerms">
-
-    <h3 class="tnth-headline">Terms of Use</h3>
-
-    <p>Thanks for signing up for TrueNTH. First, please review the terms of use to access the TrueNTH tools:</p>
-
-    <div class="well" style="margin-left: 2em">
-
-      <div id="termsText">
-        {{ terms|safe }}
-      </div>
-
-      <div id="termsExpand" class="tnth-hide">
-        <a href=""><i class="fa fa-plus"></i> View TrueNTH Terms</a>
-      </div>
-
-      <div>
-        <label id="agreeLabel" data-agree="false">
-          <i class="fa fa-square-o fa-lg"></i> <span>Check here to agree to these terms</span>
-        </label>
-      </div>
-
-    </div>
-  </div>
+  <input type="hidden" id="iq_userId" value="{{user.id}}" />
+  
+  {{tou(terms)}}
 
   <div id="aboutForm" class="tnth-hide">
 
-  <h3 class="tnth-headline">About You</h3>
+    <h3 class="tnth-headline">About You</h3>
 
-  <p>Thanks! Now, please finish your registration by telling us about yourself.</p>
-  <hr />
+    <p>Thanks! Now, please finish your registration by telling us about yourself.</p>
+    <hr />
 
-  <form class="form tnth-form to-validate" id="queriesForm" action='initial-queries' method='POST'>
+    <form class="form tnth-form to-validate" id="queriesForm" action='initial-queries' method='POST'>
 
-    <p>First, tell us who you are:</p>
+      <p>First, tell us who you are:</p>
 
-    <div class="row" id="nameGroup">
-      <div class="col-xs-6">
-        <div class="form-group float-input-label">
-          <input class="form-control float-text" id="firstname" name="firstname" placeholder="First Name" type="text" required="required" data-error="First name is required"  />
-          <div class="help-block with-errors"></div>
-        </div>
-      </div>
-      <div class="col-xs-6">
-        <div class="form-group float-input-label">
-          <input class="form-control float-text" id="lastname" name="lastname" placeholder="Last Name" type="text" required="required" data-error="Last name is required" />
-          <div class="help-block with-errors"></div>
-        </div>
-      </div>
-    </div>
-    <div class="form-group" id="rolesGroup">
-      <div class="radio">
-        <label>
-          <input type="radio" name="user_type" value="patient"> I'm a man who is concerned about prostate cancer for myself
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="user_type" value="partner"> I'm a caregiver, spouse or partner who wants to learn more about prostate cancer
-        </label>
-      </div>
-    </div>
-
-    <div class="tnth-hide" id="bdGroup">
-      <hr />
-      <p>When is your birthday?</p>
-      <input type="hidden" name="birthDate" id="birthday" value="">
-      <div class="form-group">
-        <label>Birth Date</label>
-        <div class="row">
-          <div class="col-xs-4">
-            <select class="form-control bd-element" name="birthdayMonth" id="month" data-birthday="true" required>
-              <option value="">Month...</option>
-              <option value="01">January</option>
-              <option value="02">February</option>
-              <option value="03">March</option>
-              <option value="04">April</option>
-              <option value="05">May</option>
-              <option value="06">June</option>
-              <option value="07">July</option>
-              <option value="08">August</option>
-              <option value="09">September</option>
-              <option value="10">October</option>
-              <option value="11">November</option>
-              <option value="12">December</option>
-            </select>
-          </div>
-          <div class="col-xs-4">
-            <input class="form-control bd-element" id="date" name="birthdayDate" placeholder="DD" type="text" maxlength="2" data-birthday="true" required />
-          </div>
-          <div class="col-xs-4">
-            <input class="form-control bd-element" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" data-birthday="true" required />
-          </div>
-        </div>
-        <span id="errorbirthday" class="help-block tnth-hide">A block of help text that breaks onto a new line and may extend beyond one line.</span>
-      </div>
-    </div>
-
-    <div class="tnth-hide" id="patientQ">
-      <hr />
-      <div id="patBiopsy" data-topic="biopsy" class="tnth-hide pat-q">
-        <br />
-        <p>Have you had a prostate cancer biopsy?</p>
-        <div class="form-group">
-          <div class="radio">
-            <label>
-              <input type="radio" name="biopsy" value="true"> Yes
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="biopsy" value="false"> No
-            </label>
-          </div>
-        </div>
-      </div>
-
-      <div id="patDiag" data-topic="pca_diag" class="tnth-hide pat-q">
-        <br />
-        <p>Have you been diagnosed with prostate cancer?</p>
-        <div class="form-group">
-          <div class="radio">
-            <label>
-              <input type="radio" name="pca_diag" value="true"> Yes
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="pca_diag" value="false"> No
-            </label>
-          </div>
-        </div>
-      </div>
-
-      <div id="patMeta" data-topic="pca_localized" class="tnth-hide pat-q">
-        <br />
-        <p>Is the prostate cancer only within the prostate?</p>
-        <div class="form-group">
-          <div class="radio">
-            <label>
-              <input type="radio" name="pca_localized" value="true"> Yes
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="pca_localized" value="false"> No (the cancer is in other parts of my body, too)
-            </label>
-          </div>
-        </div>
-      </div>
-
-      <div id="patTx" data-topic="tx" class="tnth-hide pat-q">
-        <br />
-        <p>Have you begun prostate cancer treatment?</p>
-        <div class="form-group">
-          <div class="radio">
-            <label>
-              <input type="radio" name="tx" value="true"> Yes
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="tx" value="false"> No
-            </label>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <div id="clinics" class="tnth-hide">
-      <hr />
-      <h3 class="tnth-headline">Your Clinic</h3>
-
-      <p>Where are you receiving your care?</p>
-
-      <div class="form-group" id="userOrgs">
-        <div style="margin-left: 10px">
-          <div id="fillOrgs"></div>
-          <div style="margin: 0.5em 0" class="checkbox"><label><input id="noOrgs" class="clinic" type="checkbox" name="organization" value="0">I'm not receiving care at any of the above clinics</label></div>
-        </div>
-      </div>
-
-    </div>
-
-
+      {{nameGroup()}}
+      {{rolesGroup()}}
+      {{bgGroup()}}
+      {{patientQGroup()}}
+      {{clinic()}}
+   
     <br />
     <p class="tnth-hide" id="continueText">Great! Click continue to start using TrueNTH.</p>
     <br />
@@ -210,107 +44,112 @@ var preselectClinic = "{{ session.get('associate_clinic_id') }}";
 $(document).ready(function(){
 
   /** 1st - get all current info **/
-  tnthAjax.getRoles({{ user.id }});
-  tnthAjax.getOrgs({{ user.id }});
-  tnthAjax.getClinical({{ user.id }});
+  /***done in macros now*****/
+  //tnthAjax.getRoles({{ user.id }});
+  //tnthAjax.getOrgs({{ user.id }});
+  //tnthAjax.getDemo({{ user.id}});
+  //tnthAjax.getClinical({{ user.id }});
 
   /** 2nd - submit changes and update UI **/
   $("#queriesForm input").on("blur",function(){
     assembleContent.demo({{ user.id }});
   });
-  $("#rolesGroup input:radio").on("click",function(){
-    var roles = [];
-    var theVal = $(this).val();
-    roles.push({name: theVal});
-    var toSend = {"roles": roles};
-    tnthAjax.putRoles({{user.id}},toSend);
-    if (theVal == "patient") {
-      // If patient, then we always show bdGroup
-      $("#bdGroup").fadeIn();
-      // Also, if they already have a valid birthday, then trigger blur to make patientQ appear
-      if ($("#year").val() != "") {
-        $("#year").blur();
-        $('html, body').animate({
-          scrollTop: $('#patientQ').offset().top
-        }, 500);
-      } else {
-        $('html, body').animate({
-          scrollTop: $('#bdGroup').offset().top
-        }, 500);
-      }
 
-      $("#clinics").hide();
-    } else {
-      // If partner, they skip questions, fadeIn Clinics
-      $("#clinics").fadeIn();
-      $("#patientQ").hide();
-      $("#bdGroup").hide();
-      $('html, body').animate({
-        scrollTop: $('#clinics').offset().top
-      }, 500);
-    }
+
+  $("#rolesGroup input:radio").on("click",function(){
+      var roles = [];
+      var theVal = $(this).val();
+      roles.push({name: theVal});
+      var toSend = {"roles": roles};
+      tnthAjax.putRoles({{user.id}},toSend);
+      if (theVal == "patient") {
+        // If patient, then we always show bdGroup
+        $("#bdGroup").fadeIn();
+        // Also, if they already have a valid birthday, then trigger blur to make patientQ appear
+        if ($("#year").val() != "") {
+          $("#year").blur();
+          $('html, body').animate({
+            scrollTop: $('#patientQ').offset().top
+          }, 500);
+        } else {
+          $('html, body').animate({
+            scrollTop: $('#bdGroup').offset().top
+          }, 500);
+        }
+        $("#clinics").hide();
+      } else {
+        // If partner, they skip questions, fadeIn Clinics
+        $("#clinics").fadeIn();
+        $("#patientQ").hide();
+        $("#bdGroup").hide();
+        $('html, body').animate({
+          scrollTop: $('#clinics').offset().top
+        }, 500);
+      };
   });
 
   $(".pat-q input:radio").on("click",function(){
-    var thisItem = $(this);
-    var toCall = thisItem.attr("name")
-    // Get value from div - either true or false
-    var toSend = thisItem.val();
-    tnthAjax.putClinical({{user.id}},toCall,toSend);
-    if (toSend == "true" || toCall ==  "pca_localized") {
-      thisItem.parents(".pat-q").next().fadeIn();
-      if (toCall == "tx") {
+      var thisItem = $(this);
+      var toCall = thisItem.attr("name")
+      // Get value from div - either true or false
+      var toSend = thisItem.val();
+      tnthAjax.putClinical({{user.id}},toCall,toSend);
+      if (toSend == "true" || toCall ==  "pca_localized") {
+        thisItem.parents(".pat-q").next().fadeIn();
+        if (toCall == "tx") {
+          $("#clinics").fadeIn();
+        }
+      } else {
+        if (toCall == "biopsy") {
+          tnthAjax.putClinical({{user.id}},"pca_diag","false");
+          tnthAjax.putClinical({{user.id}},"pca_localized","false");
+          tnthAjax.putClinical({{user.id}},"tx","false");
+        } else if (toCall == "pca_diag") {
+          tnthAjax.putClinical({{user.id}},"pca_localized","false");
+          tnthAjax.putClinical({{user.id}},"tx","false");
+        }
+        thisItem.parents(".pat-q").nextAll().fadeOut();
         $("#clinics").fadeIn();
-      }
-    } else {
-      if (toCall == "biopsy") {
-        tnthAjax.putClinical({{user.id}},"pca_diag","false");
-        tnthAjax.putClinical({{user.id}},"pca_localized","false");
-        tnthAjax.putClinical({{user.id}},"tx","false");
-      } else if (toCall == "pca_diag") {
-        tnthAjax.putClinical({{user.id}},"pca_localized","false");
-        tnthAjax.putClinical({{user.id}},"tx","false");
-      }
-      thisItem.parents(".pat-q").nextAll().fadeOut();
-      $("#clinics").fadeIn();
-    }
+      };
   });
 
   $("#userOrgs").on("change", "input", function() {
-    assembleContent.orgs({{ user.id }});
-    $("#continueText").fadeIn();
-    $("#updateProfile").removeAttr("disabled");
+      assembleContent.orgs({{ user.id }});
+      $("#continueText").fadeIn();
+      $("#updateProfile").removeAttr("disabled");
   });
 
-$("#agreeLabel").on("click",function(){
-  if ($(this).attr("data-agree") == "false") {
-    var theTerms = {};
-    //theTerms["text"] = $(this).attr('data-terms');
-    // Grab the current text of the Terms of Use
-    theTerms["text"] = $("#termsText").text();
-    // Post terms agreement via API
-    tnthAjax.postTerms(theTerms);
-    // Update UI
-    $(this).find("i").removeClass("fa-square-o").addClass("fa-check-square-o").end()
-      .find("span").text("Yes, I agree");
-    $("#aboutForm").fadeIn();
-    $('html, body').animate({
-      scrollTop: $('#aboutForm').offset().top
-    }, 1000);
-    $(this).attr("data-agree","true");
-  } else {
-    $(this).find("i").removeClass("fa-cehck-square-o").addClass("fa-square-o").end()
-      .find("span").text("Check here to agree to these terms");
-    $("#aboutForm").fadeOut();
-    $(this).attr("data-agree","false");
-  }
-});
+  $("#agreeLabel").on("click",function(){
+      if ($(this).attr("data-agree") == "false") {
+        var theTerms = {};
+        //theTerms["text"] = $(this).attr('data-terms');
+        // Grab the current text of the Terms of Use
+        theTerms["text"] = $("#termsText").text();
+        // Post terms agreement via API
+        tnthAjax.postTerms(theTerms);
+        // Update UI
+        $(this).find("i").removeClass("fa-square-o").addClass("fa-check-square-o").end()
+          .find("span").text("Yes, I agree");
+        $("#aboutForm").fadeIn();
+        $('html, body').animate({
+          scrollTop: $('#aboutForm').offset().top
+        }, 1000);
+        $(this).attr("data-agree","true");
+      } else {
+        $(this).find("i").removeClass("fa-cehck-square-o").addClass("fa-square-o").end()
+          .find("span").text("Check here to agree to these terms");
+        $("#aboutForm").fadeOut();
+        $(this).attr("data-agree","false");
+      };
+  });
 
+  //if term of use form not present - need to show the form
+  if ($("#topTerms").length == 0)  $("#aboutForm").fadeIn();
 
   $('#queriesForm').validator().on('submit', function (e) {
-    if (e.isDefaultPrevented()) {
-      alert("There's a problem with your submission. Please check your answers, then try again.");
-    }
+      if (e.isDefaultPrevented()) {
+        alert("There's a problem with your submission. Please check your answers, then try again.");
+      };
   });
 
 });
