--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -54,7 +54,7 @@
 
   {{tou()}}
 
-  {% macro bgGroup() -%}
+  {% macro dobGroup() -%}
       <div class="tnth-hide" id="bdGroup">
           <hr />
           <p>When is your birthday?</p>
