--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -14,18 +14,18 @@
 <div class="row" style="position: relative;">
     <div class="col-md-9">
 
-        {{profileName(False, true)}}
+        {{profileName(False)}}
         {{profileBirthDate(False)}}
         {{profileEmail(False)}}
         {{profilePhone(False)}}
+        {{profileOrg(user)}}
 
         <br />
         {{profileSaveBtn()}}
-        <br />
+        <br /><br/>
        {{ back_btn('patients','Patients List')}}
     </div>
 </div>
-
 
 </form>
 
@@ -61,6 +61,19 @@ $(document).ready(function(){
                         { "system": "email", "value": $("input[name=email]").val() },
                         { "system": "phone", "value": $("input[name=phone]").val() }
                     ];
+
+
+                    var orgIDs = $("#userOrgs input:checkbox:checked").map(function(){
+                        return { reference: "api/organization/"+$(this).val() };
+                    }).get();
+                    if (typeof orgIDs === 'undefined'){
+                        orgIDs = [0]  // special value for `none of the above`
+                    }
+                    var demoArray = {};
+                    _demoArray["careProvider"] = orgIDs;
+
+                    console.log(_demoArray);
+
 
                     //Adding demographic information
                     //Adding roles of patient and write_only for user
@@ -107,10 +120,11 @@ $(document).ready(function(){
 
         });
 
-    }
+    };
 
-
-
+    ['firstname', 'lastname', 'birthday', 'birthdayDay', 'birthdayMonth', 'birthdayYear'].forEach(function(fieldName) {
+        $("#" + fieldName).val('');
+    });
 
 });
 
