--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -15,35 +15,38 @@
   {% endif %}
 
   <div id="aboutForm" class="tnth-hide">
+    {% if still_needed %}
+      <h3 class="tnth-headline">About You</h3>
 
-    <h3 class="tnth-headline">About You</h3>
+      <p>Thank You! Now, please finish your registration by telling us about yourself.</p>
+      <hr />
 
-    <p>Thanks! Now, please finish your registration by telling us about yourself.</p>
-    <hr />
+      <form class="form tnth-form to-validate" id="queriesForm" action='initial-queries' method='POST'>
 
-    <form class="form tnth-form to-validate" id="queriesForm" action='initial-queries' method='POST'>
+        <p>First, tell us who you are:</p>
 
-      <p>First, tell us who you are:</p>
-
-      {% if 'name' in still_needed %}
-        {{nameGroup()}}
-      {% endif %}
-      {% if 'role' in still_needed %}
-        {{rolesGroup()}}
-      {% endif %}
-      {% if 'dob' in still_needed %}
-        {{dobGroup()}}
-      {% endif %}
-      {% if 'clinical' in still_needed %}
-        {{patientQGroup()}}
-      {% endif %}
-      {% if 'org' in still_needed %}
-        {{clinic()}}
-      {% endif %}
-   
-    <br />
-    <p class="tnth-hide" id="continueText">Great! Click continue to start using TrueNTH.</p>
-    <br />
+        {% if 'name' in still_needed %}
+          {{nameGroup()}}
+        {% endif %}
+        {% if 'role' in still_needed %}
+          {{rolesGroup()}}
+        {% endif %}
+        {% if 'dob' in still_needed %}
+          {{dobGroup()}}
+        {% endif %}
+        {% if 'clinical' in still_needed %}
+          {{patientQGroup()}}
+        {% endif %}
+        {% if 'org' in still_needed %}
+          {{clinic()}}
+        {% endif %}
+        <br />
+        <p class="tnth-hide" id="continueText">Great! Click continue to start using TrueNTH.</p>
+        <br />
+    {% else %}
+      <p> Thank you for your registration.</p>
+      <p>Click continue to start using TrueNTH</p>
+    {% endif %}
     <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary" disabled>Continue to TrueNTH</button>
   </form>
 
@@ -57,50 +60,102 @@ var preselectClinic = "{{ session.get('associate_clinic_id') }}";
 
 $(document).ready(function(){
 
-  /** 1st - get all current info **/
-  /***done in macros now*****/
-  //tnthAjax.getRoles({{ user.id }});
-  //tnthAjax.getOrgs({{ user.id }});
-  //tnthAjax.getDemo({{ user.id}});
-  //tnthAjax.getClinical({{ user.id }});
-
-  /** 2nd - submit changes and update UI **/
-  $("#queriesForm input").on("blur",function(){
-    assembleContent.demo({{ user.id }});
-  });
+    var sectionNames = ['nameGroup', 'rolesGroup', 'bdGroup', 'patBiopsy', 'patDiag', 'patMeta', 'patTx', 'clinics'];
+    var sections = [];
+    var currentSectionIndex = -1;
 
 
-  $("#rolesGroup input:radio").on("click",function(){
-      var roles = [];
-      var theVal = $(this).val();
-      roles.push({name: theVal});
-      var toSend = {"roles": roles};
-      tnthAjax.putRoles({{user.id}},toSend);
-      if (theVal == "patient") {
-        // If patient, then we always show bdGroup
-        $("#bdGroup").fadeIn();
-        // Also, if they already have a valid birthday, then trigger blur to make patientQ appear
-        if ($("#year").val() != "") {
-          $("#year").blur();
-          $('html, body').animate({
-            scrollTop: $('#patientQ').offset().top
-          }, 500);
+    var Section = function(id, index) {
+      var self = this;
+      this.element = $('#' + id);
+      this.id = id;
+      this.index = index;
+      this.element.on('click', function() {
+          
+          currentSectionIndex = (currentSectionIndex < sections.length - 1 )? (currentSectionIndex + 1) : (sections.length-1);
+          
+          //patientQ div that encloses the patient questions is currently invisible
+          //if ($(this).hasClass('pat-q')) $("#patientQ").show();
+          //last question - so need to enable the update button
+          if (currentSectionIndex === sections.length-1) $("#updateProfile").removeAttr("disabled");
+          //console.log($(this).hasClass('pat-q'));
+          console.log("section length: " + sections.length)
+          console.log('currentIndex: ' + currentSectionIndex);
+      });
+
+    };
+
+    function getSection(sectionName) {
+      return sections.find(function(section) {
+          return section.id === sectionName;
+      });
+    };
+
+    
+    sectionNames.forEach(function(sectionName, index) {
+        if ($('#' + sectionName).length > 0) sections.push(new Section(sectionName, index));
+    });
+
+    currentSectionIndex = sections.length > 0 ? 0 : -1;
+
+    console.log('sections ' + sections)
+    console.log(currentSectionIndex)
+    //console.log(sections[currentSectionIndex].element)
+    
+    if (currentSectionIndex != -1) {
+      var el = sections[currentSectionIndex].element;
+      el.show();
+      //patientQ div that encloses the patient questions is currently invisible
+      if (el.hasClass('pat-q')) $("#patientQ").show();
+    }
+
+
+    /** 1st - get all current info **/
+    /***done in macros now*****/
+    //tnthAjax.getRoles({{ user.id }});
+    //tnthAjax.getOrgs({{ user.id }});
+    //tnthAjax.getDemo({{ user.id}});
+    //tnthAjax.getClinical({{ user.id }});
+
+    /** 2nd - submit changes and update UI **/
+    $("#queriesForm input").on("blur",function(){
+      //this only works when demo info is present
+      if ($("#firstname").length > 0 || $("#lastname").length > 0)  assembleContent.demo({{ user.id }});
+    });
+
+
+    $("#rolesGroup input:radio").on("click",function(){
+        var roles = [];
+        var theVal = $(this).val();
+        roles.push({name: theVal});
+        var toSend = {"roles": roles};
+        tnthAjax.putRoles({{user.id}},toSend);
+        if (theVal == "patient") {
+          // If patient, then we always show bdGroup
+          $("#bdGroup").fadeIn();
+          // Also, if they already have a valid birthday, then trigger blur to make patientQ appear
+          if ($("#year").val() != "") {
+            $("#year").blur();
+            $('html, body').animate({
+              scrollTop: $('#patientQ').offset().top
+            }, 500);
+          } else {
+            $('html, body').animate({
+              scrollTop: $('#bdGroup').offset().top
+            }, 500);
+          }
+          $("#clinics").hide();
         } else {
+          // If partner, they skip questions, fadeIn Clinics
+          $("#clinics").fadeIn();
+          $("#patientQ").hide();
+          $("#bdGroup").hide();
           $('html, body').animate({
-            scrollTop: $('#bdGroup').offset().top
+            scrollTop: $('#clinics').offset().top
           }, 500);
-        }
-        $("#clinics").hide();
-      } else {
-        // If partner, they skip questions, fadeIn Clinics
-        $("#clinics").fadeIn();
-        $("#patientQ").hide();
-        $("#bdGroup").hide();
-        $('html, body').animate({
-          scrollTop: $('#clinics').offset().top
-        }, 500);
-      };
-  });
+        };
+    });
+  
 
   $(".pat-q input:radio").on("click",function(){
       var thisItem = $(this);
@@ -165,6 +220,8 @@ $(document).ready(function(){
         alert("There's a problem with your submission. Please check your answers, then try again.");
       };
   });
+
+  if (currentSectionIndex == -1) $("#updateProfile").removeAttr("disabled");
 
 });
 {% endblock %}
